[gd_scene load_steps=11 format=3 uid="uid://g1tqs4ow4ac8"]

[ext_resource type="Script" path="res://pause.gd" id="1_ja2st"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xylsb"]
bg_color = Color(0.176471, 0.380392, 0.427451, 0.67451)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7ebpj"]
bg_color = Color(0.577008, 0.577008, 0.577008, 0.760784)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ikbl7"]
bg_color = Color(0.244776, 0.244776, 0.244776, 0.760784)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5sfrr"]
bg_color = Color(1, 1, 1, 0.760784)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hw4mf"]
bg_color = Color(0, 0, 0, 0.635294)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_medhi"]
bg_color = Color(0.251929, 0.508773, 0.568412, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0, 0, 0.843137)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_55sli"]
bg_color = Color(0.576471, 0.576471, 0.576471, 0.760784)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k8vsk"]
bg_color = Color(0.243137, 0.243137, 0.243137, 0.760784)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jck5u"]
bg_color = Color(1, 1, 1, 0.760784)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30
shadow_size = 3

[node name="Pause" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_ja2st")

[node name="Panel" type="Panel" parent="."]
process_mode = 3
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xylsb")

[node name="Buttons" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -147.0
offset_top = -120.5
offset_right = 147.0
offset_bottom = 120.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Resume" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
theme_override_styles/hover = SubResource("StyleBoxFlat_7ebpj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ikbl7")
theme_override_styles/normal = SubResource("StyleBoxFlat_5sfrr")
text = "Resume"

[node name="Inventory" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
theme_override_styles/hover = SubResource("StyleBoxFlat_7ebpj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ikbl7")
theme_override_styles/normal = SubResource("StyleBoxFlat_5sfrr")
text = "Inventory"

[node name="Quit" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 48
theme_override_styles/hover = SubResource("StyleBoxFlat_7ebpj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ikbl7")
theme_override_styles/normal = SubResource("StyleBoxFlat_5sfrr")
text = "Quit"

[node name="Quit_Confirm" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel2" type="Panel" parent="Quit_Confirm"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hw4mf")

[node name="Panel3" type="Panel" parent="Quit_Confirm"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -159.5
offset_top = -83.0
offset_right = 159.5
offset_bottom = 83.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_medhi")

[node name="Yes" type="Button" parent="Quit_Confirm"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -107.0
offset_top = -2.0
offset_right = -38.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_55sli")
theme_override_styles/pressed = SubResource("StyleBoxFlat_k8vsk")
theme_override_styles/normal = SubResource("StyleBoxFlat_jck5u")
text = "Yes"

[node name="No" type="Button" parent="Quit_Confirm"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 41.0
offset_top = -2.0
offset_right = 110.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/hover = SubResource("StyleBoxFlat_55sli")
theme_override_styles/pressed = SubResource("StyleBoxFlat_k8vsk")
theme_override_styles/normal = SubResource("StyleBoxFlat_jck5u")
text = "No"

[node name="Label" type="Label" parent="Quit_Confirm"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -149.0
offset_top = -63.0
offset_right = 149.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Are you sure you'd like to quit?"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Buttons/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Buttons/Inventory" to="." method="_on_inventory_pressed"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Quit_Confirm/Yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="Quit_Confirm/No" to="." method="_on_no_pressed"]
